--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ history
 /init.el~
 /starter-kit-bindings.el~
 /anything-c-adaptive-history
+/emacs-backup/Users/hooptie45/.emacs.d/starter-kit-real-auto-save.el~
