March 25 2:00am --NP

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,10 @@ history
 /starter-kit-bindings.el~
 /anything-c-adaptive-history
 /trash/
+/yasnippet-read-only/
+/yasnippet/
+/np.el
+/js.js
+/ido/.ido.last
+/frequencies
+/pom.xml
