--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+*#*
 auto-complete*
 *.swp
 semanticdb*
@@ -83,3 +84,4 @@ history
 /eproject.lst
 /fuzzy-find-in-project.el
 /groups/t.el
+/groups/.#starter-kit-dired.el
